removing unused creation of new objects